--- a/config/theme.ini
+++ b/config/theme.ini
@@ -1,7 +1,7 @@
 [info]
-name = "Foundation"
+name = "MODM - Foundation"
 version = "1.1.0"
-author = "Omeka Team"
+author = "Omeka Team + Mods by MODM"
 description = "A starter theme using the ZURB Foundation toolkit."
 theme_link = "https://github.com/omeka-s-themes/foundation-s"
 author_link = "https://omeka.org"
